assets/css/narrow-jumbotron.css
.photo-credit {
  font-size: 0.75em;
  text-align: right;
}

.container {
  background-color: white;
}

/* Space out content a bit */
body {
  padding-top: 1.5rem;
  padding-bottom: 1.5rem;
  background-color: #e7e7eb;
  font-family: "Crimson Text", serif;
}

p {
  font-size: 1.25em;
}

/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.footer {
  padding-right: 1rem;
  padding-left: 1rem;
}

.header,
h3 {
  padding-bottom: 0.5rem;
  padding-top: 1rem;
  border-bottom: 0.05rem solid #e5e5e5;
  font-family: "Bad Script", cursive;
  text-align: center;
}

.header h3 {
  margin-top: 0;
  margin-bottom: 0;
  line-height: 3rem;
}

/* Custom page footer */
.footer {
  padding-top: 1.5rem;
  color: #777;
  border-top: 0.05rem solid #e5e5e5;
}

/* Customize container */
@media (min-width: 80em) {
  .container {
    max-width: 80rem;
  }
}

img {
  width: auto;
  padding: 0;
  display: block;
  max-width: 100%;
  height: auto;
}

.marketing {
  margin: 3rem 0;
}
.marketing p + h4 {
  margin-top: 1.5rem;
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 48em) {
  /* Remove the padding we set earlier */
  .header,
  .marketing,
  .footer {
    padding-right: 0;
    padding-left: 0;
  }
  /* Space out the masthead */
  .header {
    margin-bottom: 2rem;
  }
  /* Remove the bottom border on the jumbotron for visual effect */
  .jumbotron {
    border-bottom: 0;
  }
}

